development/spikes/PaymentManagement/src/main/java/com/affaince/payments/grammer/PaymentsParser.java
// Generated from Payments.g4 by ANTLR 4.13.0

package com.affaince.payments.grammer;

import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.atn.ATN;
import org.antlr.v4.runtime.atn.ATNDeserializer;
import org.antlr.v4.runtime.atn.ParserATNSimulator;
import org.antlr.v4.runtime.atn.PredictionContextCache;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.tree.ParseTreeListener;
import org.antlr.v4.runtime.tree.ParseTreeVisitor;
import org.antlr.v4.runtime.tree.TerminalNode;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PaymentsParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.0", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, GIVEN=2, ASINPUT=3, COMPUTE=4, EACH=5, SUMOF=6, ELIGIBLEWHEN=7, 
		PAY=8, BEFORE=9, AFTER=10, IN=11, ON=12, PROPORTION=13, DEFAULT=14, OF=15, 
		THEN=16, ORSTR=17, RESIDUALPAY=18, CURRENTSUBSCRIPTIONAMOUNT=19, ADVANCE_PAYMENT_EVENT=20, 
		EACHDELIVERY=21, FOR=22, DELIVERIES=23, PLUS=24, NullLiteral=25, NUMBER=26, 
		LPAREN=27, RPAREN=28, LBRACE=29, RBRACE=30, LBRACK=31, RBRACK=32, COMMA=33, 
		SEMI=34, COLON=35, ASSIGN=36, GT=37, LT=38, BANG=39, EQUAL=40, LE=41, 
		GE=42, NOTEQUAL=43, INC=44, DEC=45, ADD=46, SUB=47, MUL=48, DIV=49, MOD=50, 
		QUESTIONMARK=51, BooleanLiteral=52, CharacterLiteral=53, StringLiteral=54, 
		IDENTIFIER=55, WS=56, COMMENT=57, LINE_COMMENT=58;
	public static final int
		RULE_scheme = 0, RULE_givenUnit = 1, RULE_givenBody = 2, RULE_computeUnit = 3, 
		RULE_computeBlock = 4, RULE_advancePayUnit = 5, RULE_residualPayUnit = 6, 
		RULE_eligibilityUnit = 7, RULE_payBefore = 8, RULE_payAfter = 9, RULE_payMultiplier = 10, 
		RULE_variableDeclarationStatement = 11, RULE_variableDeclaratorId = 12, 
		RULE_variableInitializer = 13, RULE_arrayInitializer = 14, RULE_conditionalExpression = 15, 
		RULE_conditionalOrExpression = 16, RULE_conditionalAndExpression = 17, 
		RULE_relationalOp = 18, RULE_relationalExpression = 19, RULE_additiveExpression = 20, 
		RULE_multiplicativeExpression = 21, RULE_unaryExpression = 22, RULE_primary = 23, 
		RULE_variableName = 24, RULE_connectorOr = 25, RULE_parExpression = 26, 
		RULE_nonDefaultProportionExpression = 27, RULE_proportionExpression = 28, 
		RULE_expressionList = 29, RULE_expression = 30, RULE_literal = 31, RULE_iterativeStatement = 32, 
		RULE_iterativeAggregationExpression = 33, RULE_statement = 34, RULE_statementExpression = 35, 
		RULE_block = 36, RULE_blockStatement = 37, RULE_connectorAnd = 38;
	private static String[] makeRuleNames() {
		return new String[] {
			"scheme", "givenUnit", "givenBody", "computeUnit", "computeBlock", "advancePayUnit", 
			"residualPayUnit", "eligibilityUnit", "payBefore", "payAfter", "payMultiplier", 
			"variableDeclarationStatement", "variableDeclaratorId", "variableInitializer", 
			"arrayInitializer", "conditionalExpression", "conditionalOrExpression", 
			"conditionalAndExpression", "relationalOp", "relationalExpression", "additiveExpression", 
			"multiplicativeExpression", "unaryExpression", "primary", "variableName", 
			"connectorOr", "parExpression", "nonDefaultProportionExpression", "proportionExpression", 
			"expressionList", "expression", "literal", "iterativeStatement", "iterativeAggregationExpression", 
			"statement", "statementExpression", "block", "blockStatement", "connectorAnd"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'and'", "'given'", "' as input'", "'compute'", "'each '", "'sumOf '", 
			"'eligibleWhen'", "'pay'", "'before'", "'after'", "'in'", "'on'", "'proportion'", 
			"'default'", "'of'", "'then'", "'or'", "'residual due amount'", "'current subscription amount'", 
			"'subscription confirmation'", "'each delivery'", "'for'", "'deliveries'", 
			"'plus'", "'null'", null, "'('", "')'", "'{'", "'}'", "'['", "']'", "','", 
			"';'", "':'", "'='", "'>'", "'<'", "'!'", "'=='", "'<='", "'>='", "'!='", 
			"'++'", "'--'", "'+'", "'-'", "'*'", "'/'", "'%'", "'?'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, "GIVEN", "ASINPUT", "COMPUTE", "EACH", "SUMOF", "ELIGIBLEWHEN", 
			"PAY", "BEFORE", "AFTER", "IN", "ON", "PROPORTION", "DEFAULT", "OF", 
			"THEN", "ORSTR", "RESIDUALPAY", "CURRENTSUBSCRIPTIONAMOUNT", "ADVANCE_PAYMENT_EVENT", 
			"EACHDELIVERY", "FOR", "DELIVERIES", "PLUS", "NullLiteral", "NUMBER", 
			"LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", "COMMA", 
			"SEMI", "COLON", "ASSIGN", "GT", "LT", "BANG", "EQUAL", "LE", "GE", "NOTEQUAL", 
			"INC", "DEC", "ADD", "SUB", "MUL", "DIV", "MOD", "QUESTIONMARK", "BooleanLiteral", 
			"CharacterLiteral", "StringLiteral", "IDENTIFIER", "WS", "COMMENT", "LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Payments.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PaymentsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SchemeContext extends ParserRuleContext {
		public GivenUnitContext givenUnit() {
			return getRuleContext(GivenUnitContext.class,0);
		}
		public AdvancePayUnitContext advancePayUnit() {
			return getRuleContext(AdvancePayUnitContext.class,0);
		}
		public TerminalNode THEN() { return getToken(PaymentsParser.THEN, 0); }
		public ResidualPayUnitContext residualPayUnit() {
			return getRuleContext(ResidualPayUnitContext.class,0);
		}
		public TerminalNode EOF() { return getToken(PaymentsParser.EOF, 0); }
		public SchemeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_scheme; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PaymentsListener ) ((PaymentsListener)listener).enterScheme(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PaymentsListener ) ((PaymentsListener)listener).exitScheme(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PaymentsVisitor ) return ((PaymentsVisitor<? extends T>)visitor).visitScheme(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SchemeContext scheme() throws RecognitionException {
		SchemeContext _localctx = new SchemeContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_scheme);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			givenUnit();
			setState(79);
			advancePayUnit();
			setState(80);
			match(THEN);
			setState(81);
			residualPayUnit();
			setState(82);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GivenUnitContext extends ParserRuleContext {
		public TerminalNode GIVEN() { return getToken(PaymentsParser.GIVEN, 0); }
		public GivenBodyContext givenBody() {
			return getRuleContext(GivenBodyContext.class,0);
		}
		public GivenUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_givenUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PaymentsListener ) ((PaymentsListener)listener).enterGivenUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PaymentsListener ) ((PaymentsListener)listener).exitGivenUnit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PaymentsVisitor ) return ((PaymentsVisitor<? extends T>)visitor).visitGivenUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GivenUnitContext givenUnit() throws RecognitionException {
		GivenUnitContext _localctx = new GivenUnitContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_givenUnit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(84);
			match(GIVEN);
			setState(85);
			givenBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class GivenBodyContext extends ParserRuleContext {
		public List<VariableDeclarationStatementContext> variableDeclarationStatement() {
			return getRuleContexts(VariableDeclarationStatementContext.class);
		}
		public VariableDeclarationStatementContext variableDeclarationStatement(int i) {
			return getRuleContext(VariableDeclarationStatementContext.class,i);
		}
		public GivenBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_givenBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PaymentsListener ) ((PaymentsListener)listener).enterGivenBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PaymentsListener ) ((PaymentsListener)listener).exitGivenBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PaymentsVisitor ) return ((PaymentsVisitor<? extends T>)visitor).visitGivenBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final GivenBodyContext givenBody() throws RecognitionException {
		GivenBodyContext _localctx = new GivenBodyContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_givenBody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENTIFIER) {
				{
				{
				setState(87);
				variableDeclarationStatement();
				}
				}
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComputeUnitContext extends ParserRuleContext {
		public TerminalNode COMPUTE() { return getToken(PaymentsParser.COMPUTE, 0); }
		public ComputeBlockContext computeBlock() {
			return getRuleContext(ComputeBlockContext.class,0);
		}
		public ComputeUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_computeUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PaymentsListener ) ((PaymentsListener)listener).enterComputeUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PaymentsListener ) ((PaymentsListener)listener).exitComputeUnit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PaymentsVisitor ) return ((PaymentsVisitor<? extends T>)visitor).visitComputeUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComputeUnitContext computeUnit() throws RecognitionException {
		ComputeUnitContext _localctx = new ComputeUnitContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_computeUnit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			match(COMPUTE);
			setState(94);
			computeBlock();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComputeBlockContext extends ParserRuleContext {
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public ComputeBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_computeBlock; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PaymentsListener ) ((PaymentsListener)listener).enterComputeBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PaymentsListener ) ((PaymentsListener)listener).exitComputeBlock(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PaymentsVisitor ) return ((PaymentsVisitor<? extends T>)visitor).visitComputeBlock(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComputeBlockContext computeBlock() throws RecognitionException {
		ComputeBlockContext _localctx = new ComputeBlockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_computeBlock);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AdvancePayUnitContext extends ParserRuleContext {
		public TerminalNode PAY() { return getToken(PaymentsParser.PAY, 0); }
		public ComputeBlockContext computeBlock() {
			return getRuleContext(ComputeBlockContext.class,0);
		}
		public TerminalNode ON() { return getToken(PaymentsParser.ON, 0); }
		public TerminalNode ADVANCE_PAYMENT_EVENT() { return getToken(PaymentsParser.ADVANCE_PAYMENT_EVENT, 0); }
		public TerminalNode SEMI() { return getToken(PaymentsParser.SEMI, 0); }
		public AdvancePayUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_advancePayUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PaymentsListener ) ((PaymentsListener)listener).enterAdvancePayUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PaymentsListener ) ((PaymentsListener)listener).exitAdvancePayUnit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PaymentsVisitor ) return ((PaymentsVisitor<? extends T>)visitor).visitAdvancePayUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AdvancePayUnitContext advancePayUnit() throws RecognitionException {
		AdvancePayUnitContext _localctx = new AdvancePayUnitContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_advancePayUnit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(PAY);
			setState(99);
			computeBlock();
			setState(100);
			match(ON);
			setState(101);
			match(ADVANCE_PAYMENT_EVENT);
			setState(102);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ResidualPayUnitContext extends ParserRuleContext {
		public TerminalNode PAY() { return getToken(PaymentsParser.PAY, 0); }
		public ComputeBlockContext computeBlock() {
			return getRuleContext(ComputeBlockContext.class,0);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<PayMultiplierContext> payMultiplier() {
			return getRuleContexts(PayMultiplierContext.class);
		}
		public PayMultiplierContext payMultiplier(int i) {
			return getRuleContext(PayMultiplierContext.class,i);
		}
		public List<VariableNameContext> variableName() {
			return getRuleContexts(VariableNameContext.class);
		}
		public VariableNameContext variableName(int i) {
			return getRuleContext(VariableNameContext.class,i);
		}
		public ProportionExpressionContext proportionExpression() {
			return getRuleContext(ProportionExpressionContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(PaymentsParser.SEMI, 0); }
		public PayBeforeContext payBefore() {
			return getRuleContext(PayBeforeContext.class,0);
		}
		public PayAfterContext payAfter() {
			return getRuleContext(PayAfterContext.class,0);
		}
		public List<TerminalNode> COMMA() { return getTokens(PaymentsParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(PaymentsParser.COMMA, i);
		}
		public ResidualPayUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_residualPayUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PaymentsListener ) ((PaymentsListener)listener).enterResidualPayUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PaymentsListener ) ((PaymentsListener)listener).exitResidualPayUnit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PaymentsVisitor ) return ((PaymentsVisitor<? extends T>)visitor).visitResidualPayUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ResidualPayUnitContext residualPayUnit() throws RecognitionException {
		ResidualPayUnitContext _localctx = new ResidualPayUnitContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_residualPayUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(PAY);
			setState(105);
			computeBlock();
			setState(108);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BEFORE:
				{
				setState(106);
				payBefore();
				}
				break;
			case AFTER:
				{
				setState(107);
				payAfter();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(110);
			expression();
			setState(111);
			payMultiplier();
			setState(112);
			variableName();
			setState(120);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(113);
				match(COMMA);
				setState(114);
				expression();
				setState(115);
				payMultiplier();
				setState(116);
				variableName();
				}
				}
				setState(122);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(123);
			proportionExpression();
			setState(124);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EligibilityUnitContext extends ParserRuleContext {
		public TerminalNode ELIGIBLEWHEN() { return getToken(PaymentsParser.ELIGIBLEWHEN, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public EligibilityUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eligibilityUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PaymentsListener ) ((PaymentsListener)listener).enterEligibilityUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PaymentsListener ) ((PaymentsListener)listener).exitEligibilityUnit(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PaymentsVisitor ) return ((PaymentsVisitor<? extends T>)visitor).visitEligibilityUnit(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EligibilityUnitContext eligibilityUnit() throws RecognitionException {
		EligibilityUnitContext _localctx = new EligibilityUnitContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_eligibilityUnit);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126);
			match(ELIGIBLEWHEN);
			setState(127);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PayBeforeContext extends ParserRuleContext {
		public TerminalNode BEFORE() { return getToken(PaymentsParser.BEFORE, 0); }
		public PayBeforeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_payBefore; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PaymentsListener ) ((PaymentsListener)listener).enterPayBefore(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PaymentsListener ) ((PaymentsListener)listener).exitPayBefore(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PaymentsVisitor ) return ((PaymentsVisitor<? extends T>)visitor).visitPayBefore(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PayBeforeContext payBefore() throws RecognitionException {
		PayBeforeContext _localctx = new PayBeforeContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_payBefore);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(BEFORE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PayAfterContext extends ParserRuleContext {
		public TerminalNode AFTER() { return getToken(PaymentsParser.AFTER, 0); }
		public PayAfterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_payAfter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PaymentsListener ) ((PaymentsListener)listener).enterPayAfter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PaymentsListener ) ((PaymentsListener)listener).exitPayAfter(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PaymentsVisitor ) return ((PaymentsVisitor<? extends T>)visitor).visitPayAfter(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PayAfterContext payAfter() throws RecognitionException {
		PayAfterContext _localctx = new PayAfterContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_payAfter);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(AFTER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PayMultiplierContext extends ParserRuleContext {
		public TerminalNode OF() { return getToken(PaymentsParser.OF, 0); }
		public PayMultiplierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_payMultiplier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PaymentsListener ) ((PaymentsListener)listener).enterPayMultiplier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PaymentsListener ) ((PaymentsListener)listener).exitPayMultiplier(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PaymentsVisitor ) return ((PaymentsVisitor<? extends T>)visitor).visitPayMultiplier(this);
			else return visitor.visitChildren(this);
		}
	}
